k8s/infra/network/gateway/envs/dev/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
spec:
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.8.3.80
